Se implmenta la libreria chart.js para crear graficas de los avances estadisticos en el sitio con rol de cliente ademas de sus valores actuales + se implementa la insercion de solicitudes y se arega un video para el inicio del sitio web.

--- a/.classpath
+++ b/.classpath
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
-			<attribute name="module" value="true" />
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/java" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web" />
+			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con"
-		path="org.eclipse.jst.j2ee.internal.web.container" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.j2ee.internal.module.container" />
-	<classpathentry kind="lib"
-		path="D:/ADSO_SENA/INSTALADORES/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar" />
-	<classpathentry kind="lib"
-		path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/jbcrypt-0.4.jar" />
-	<classpathentry kind="output" path="build/classes" />
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/ADSO_SENA/INSTALADORES/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar"/>
+	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/jbcrypt-0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/hellocharts-library-1.5.8.jar"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
