--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,7 @@
 	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/org.apache.commons.collections4_4.4.0.v20221112-0806.jar"/>
 	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/org.apache.commons.commons-io_2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/org.apache.commons.logging_1.2.0.v20180409-1502.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/quina/eclipse-workspace/proyecto_siesweb/src/main/webapp/WEB-INF/lib/mockito-core-5.5.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
